cmake_minimum_required(VERSION 3.16)

project(CMPR120BOOTCAMPQUESTION LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(CMPR120BOOTCAMPQUESTION main.cpp
    main.h)

include(GNUInstallDirs)
install(TARGETS CMPR120BOOTCAMPQUESTION
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
